--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@tsconfig/node16": "^1.0.3",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/sequelize": "^4.28.13",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
@@ -25,6 +26,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.2"
   }
 }
