--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
       "module": "commonjs",
       "outDir": "dist",
       "sourceMap": true,
+      "typeRoots": ["node_modules/@types", ".src/types"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
