--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "@tsconfig/node16": "^1.0.3",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
     "@types/sequelize": "^4.28.13",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
+    "babel-jest": "^28.1.2",
     "eslint": "^8.18.0",
+    "jest": "^28.1.2",
     "nodemon": "^2.0.18",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
