--- a/server/package.json
+++ b/server/package.json
@@ -33,11 +33,12 @@
   "dependencies": {
     "@braintree/sanitize-url": "^6.0.0",
     "@types/cors": "^2.8.12",
+    "@types/jwt-decode": "^3.1.0",
     "@types/uuid": "^8.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-jwt": "^7.7.5",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.2",
     "uuid": "^8.3.2"
