--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "jsonwebtoken": "^8.5.1",
     "pinia": "^2.0.14",
     "vue": "^3.2.37",
+    "vue-cryptojs": "^2.3.0",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
